--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,12 @@
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
-    <!-- built files will be auto injected -->
+   
   </body>
 </html>
+
+<style>
+  body{
+    background-color:  #121214;
+  }
+</style>
